[gd_scene load_steps=7 format=3 uid="uid://ds7eus4erbjtl"]

[ext_resource type="Script" path="res://Scripts/main.gd" id="1_kn0ru"]
[ext_resource type="Texture2D" uid="uid://c6mwhkj2aj7ff" path="res://Entities/icon.svg" id="2_maliw"]
[ext_resource type="Texture2D" uid="uid://cigpog7btrwcd" path="res://Entities/ranged_enemy.png" id="3_onbhm"]
[ext_resource type="Texture2D" uid="uid://bak5wgw6f2hoh" path="res://Entities/melee_enemy.png" id="5_wy88h"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5yf2v"]

[sub_resource type="Curve2D" id="Curve2D_snvlk"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 44, 63, 0, 0, 0, 0, 584, 64, 0, 0, 0, 0, 585, 597, 0, 0, 0, 0, 46, 596, 0, 0, 0, 0, 44, 63)
}
point_count = 5

[node name="Main" type="Node2D"]
y_sort_enabled = true
script = ExtResource("1_kn0ru")

[node name="Level" type="Node2D" parent="."]
position = Vector2(32, 21)

[node name="ColorRect" type="ColorRect" parent="Level"]
z_index = -10
offset_left = -35.0
offset_top = -22.0
offset_right = 665.0
offset_bottom = 680.0
mouse_filter = 2
color = Color(0.655974, 0.573156, 0.436145, 1)
metadata/_edit_use_anchors_ = true

[node name="Left" type="StaticBody2D" parent="Level"]
position = Vector2(-39, 322)
scale = Vector2(1, 6.76)

[node name="Sprite2D" type="Sprite2D" parent="Level/Left"]
texture = ExtResource("2_maliw")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Level/Left"]
scale = Vector2(5.84422, 5.84422)
shape = SubResource("RectangleShape2D_5yf2v")

[node name="Right" type="StaticBody2D" parent="Level"]
position = Vector2(678, 322)
scale = Vector2(1, 6.76)

[node name="Sprite2D" type="Sprite2D" parent="Level/Right"]
texture = ExtResource("2_maliw")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Level/Right"]
scale = Vector2(5.84422, 5.84422)
shape = SubResource("RectangleShape2D_5yf2v")

[node name="Up" type="StaticBody2D" parent="Level"]
position = Vector2(345, -37)
rotation = 1.5708
scale = Vector2(1, 6.76)

[node name="Sprite2D" type="Sprite2D" parent="Level/Up"]
texture = ExtResource("2_maliw")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Level/Up"]
scale = Vector2(5.84422, 5.84422)
shape = SubResource("RectangleShape2D_5yf2v")

[node name="Down" type="StaticBody2D" parent="Level"]
position = Vector2(345, 693)
rotation = 1.5708
scale = Vector2(1, 6.76)

[node name="Sprite2D" type="Sprite2D" parent="Level/Down"]
texture = ExtResource("2_maliw")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Level/Down"]
scale = Vector2(5.84422, 5.84422)
shape = SubResource("RectangleShape2D_5yf2v")

[node name="Path2D" type="Path2D" parent="Level"]
curve = SubResource("Curve2D_snvlk")

[node name="PathFollow2D" type="PathFollow2D" parent="Level/Path2D"]
position = Vector2(44, 63)
rotation = 0.00185185

[node name="PlayerSpawn" type="Marker2D" parent="Level"]
position = Vector2(323, 316)

[node name="EnemySpawnTimer" type="Timer" parent="."]
wait_time = 0.7

[node name="ComboTimer" type="Timer" parent="."]
one_shot = true

[node name="DeadSpriteTemplate" type="Sprite2D" parent="."]
unique_name_in_owner = true
z_as_relative = false
position = Vector2(-341, -159)
scale = Vector2(0.328125, 0.492188)
texture = ExtResource("2_maliw")

[node name="DeadRangedSprite" type="Sprite2D" parent="."]
position = Vector2(-111, -153)
rotation = 0.00242928
scale = Vector2(5.31, 5.31)
texture = ExtResource("3_onbhm")
region_enabled = true
region_rect = Rect2(32, 48, 16, 16)

[node name="DeadMeleeSprite" type="Sprite2D" parent="."]
unique_name_in_owner = true
position = Vector2(-222, -151)
scale = Vector2(5.31, 5.31)
texture = ExtResource("5_wy88h")
region_enabled = true
region_rect = Rect2(20, 48, 16, 16)

[node name="StartGameUI" type="CanvasGroup" parent="."]
position = Vector2(6, 23)

[node name="Label" type="Label" parent="StartGameUI"]
offset_left = 201.0
offset_top = 265.0
offset_right = 502.0
offset_bottom = 378.0
size_flags_horizontal = 8
theme_override_font_sizes/font_size = 40
text = "Dojo Of Demise"

[node name="Label2" type="Label" parent="StartGameUI"]
offset_left = 283.0
offset_top = 322.0
offset_right = 584.0
offset_bottom = 435.0
size_flags_horizontal = 8
theme_override_font_sizes/font_size = 20
text = "Click to start"

[node name="MidGameUI" type="CanvasGroup" parent="."]
visible = false

[node name="ScoreLabel" type="Label" parent="MidGameUI"]
offset_left = 63.0
offset_top = 44.0
offset_right = 194.0
offset_bottom = 101.0
size_flags_horizontal = 8
size_flags_vertical = 8
theme_override_font_sizes/font_size = 30
text = "Score: "
metadata/_edit_use_anchors_ = true

[node name="ComboLabel" type="Label" parent="MidGameUI"]
offset_left = 572.0
offset_top = 47.0
offset_right = 703.0
offset_bottom = 104.0
size_flags_horizontal = 8
size_flags_vertical = 8
theme_override_font_sizes/font_size = 30
text = "x1"
metadata/_edit_use_anchors_ = true

[connection signal="timeout" from="EnemySpawnTimer" to="." method="_on_enemy_spawn_timer_timeout"]
[connection signal="timeout" from="ComboTimer" to="." method="_on_combo_timer_timeout"]
